move code for enter page to new file and add errors for enter page

--- a/html/enter/signup.html
+++ b/html/enter/signup.html
@@ -1,5 +1,6 @@
 <div id="enter">
   <h2>Sign Up</h2>
+  <p class="error">{}</p>
   <form method="post" action="/enter?signup=true">
     <div id="email-section">
       <label for="email">Email:</label><br />
