--- a/html/enter/login.html
+++ b/html/enter/login.html
@@ -1,5 +1,6 @@
 <div id="enter">
   <h2>Log In</h2>
+  <p class="error">{}</p>
   <form method="post" action="/enter?login=true">
     <div id="email-section">
       <label for="email">Email:</label><br />
