add bool expressions in template system and thus update header based on this

--- a/html/header_template.html
+++ b/html/header_template.html
@@ -18,10 +18,16 @@
         <ul class="left">
           <li><a href="/" class="nav-link">Home</a></li>
           <li><a href="/publish" class="nav-link">Publish</a></li>
+          {
           <li><a href="/profile" class="nav-link">Profile</a></li>
+          | }
         </ul>
         <ul class="right">
+          {
+          <li><a href="/enter?logout=true" class="nav-link">Log Out</a></li>
+          |
           <li><a href="/enter" class="nav-link">Log In/Sign Up</a></li>
+          }
         </ul>
       </nav>
     </header>
