fix logout link

--- a/html/header_template.html
+++ b/html/header_template.html
@@ -24,7 +24,7 @@
         </ul>
         <ul class="right">
           {
-          <li><a href="/enter?logout=true" class="nav-link">Log Out</a></li>
+          <li><a href="/enter?action=logout" class="nav-link">Log Out</a></li>
           |
           <li><a href="/enter" class="nav-link">Log In/Sign Up</a></li>
           }
