add basic article + publish system

--- a/html/header_template.html
+++ b/html/header_template.html
@@ -7,9 +7,9 @@
     <link
       rel="icon"
       type="image/png"
-      href="assets/msj-logo-transparent-64.png"
+      href="/assets/msj-logo-transparent-64.png"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <header>
