--- a/html/publish.html
+++ b/html/publish.html
@@ -10,5 +10,5 @@
       <label for="content">Content:</label><br />
       <textarea name="content" required rows="30"></textarea><br />
     </div>
-    <input type="submit" value="Publish" />
+    <input type="submit" value="Publish" { | disabled } />
 </div>
