fix some editor styles and add proper styles for published content

--- a/html/article.html
+++ b/html/article.html
@@ -1,4 +1,8 @@
-<div id="article">
+<link
+  rel="stylesheet"
+  href="https://cdn.ckeditor.com/ckeditor5/42.0.1/ckeditor5.css"
+/>
+<div id="article" class="ck-content">
   <h2>{}</h2>
   <p>{}</p>
 </div>
