add author name for article and change profle to use axum::extract::Path instead of axum::extract::Query

--- a/html/article.html
+++ b/html/article.html
@@ -3,6 +3,9 @@
   href="https://cdn.ckeditor.com/ckeditor5/42.0.1/ckeditor5.css"
 />
 <div id="article" class="ck-content">
-  <h2>{}</h2>
+  <h2 class="title">{}</h2>
+  <p class="author-wrapper">
+    Written by: <a class="author" href="/profile/{}">{}</a>
+  </p>
   <p>{}</p>
 </div>
