add date to article page

--- a/html/article.html
+++ b/html/article.html
@@ -4,8 +4,11 @@
 />
 <div id="article" class="ck-content">
   <h2 class="title">{}</h2>
-  <p class="author-wrapper">
-    Written by: <a class="author" href="/profile/{}">{}</a>
-  </p>
+  <div class="info-wrapper">
+    <p class="author-wrapper">
+      Written by: <a class="author" href="/profile/{}">{}</a>
+    </p>
+    <p class="date-wrapper">Published on: <span class="date">{}</span></p>
+  </div>
   <p>{}</p>
 </div>
