--- a/html/index.html
+++ b/html/index.html
@@ -2,4 +2,7 @@
   rel="stylesheet"
   href="https://cdn.ckeditor.com/ckeditor5/42.0.1/ckeditor5.css"
 />
-<div id="home">{}</div>
+<div id="home">
+  <h2>Latest Articles</h2>
+  {}
+</div>
