overhaul of template system to make it slightly more resilient (i should probably just use jira)

--- a/html/article.html
+++ b/html/article.html
@@ -3,12 +3,12 @@
   href="https://cdn.ckeditor.com/ckeditor5/42.0.1/ckeditor5.css"
 />
 <div id="article" class="ck-content">
-  <h2 class="title">{}</h2>
+  <h2 class="title">{title}</h2>
   <div class="info-wrapper">
     <p class="author-wrapper">
-      Written by: <a class="author" href="/profile/{}">{}</a>
+      Written by: <a class="author" href="/profile/{author}">{author}</a>
     </p>
-    <p class="date-wrapper">Published on: <span class="date">{}</span></p>
+    <p class="date-wrapper">Published on: <span class="date">{date}</span></p>
   </div>
-  <p>{}</p>
+  <p>{content}</p>
 </div>
