--- a/html/enter/signup.html
+++ b/html/enter/signup.html
@@ -1,6 +1,6 @@
 <div id="enter">
   <h2>Sign Up</h2>
-  <p class="error">{}</p>
+  <p class="error">{error}</p>
   <form method="post" action="/enter?action=signup">
     <div id="email-section">
       <label for="email">Email:</label><br />
