--- a/html/profile.html
+++ b/html/profile.html
@@ -1,6 +1,6 @@
 <div id="profile">
   <!--ACCOUNT NAME-->
-  <h2>Username: {}</h2>
+  <h2>Username: {username}</h2>
   <!--AUTHORED ARTICLES-->
-  <div id="authored-articles">{}</div>
+  <div id="authored-articles">{articles}</div>
 </div>
