--- a/html/publish.html
+++ b/html/publish.html
@@ -14,7 +14,7 @@
       <div id="editor">
       </div>
     </div>
-    <input type="submit" value="Publish" { | disabled } />
+    <input type="submit" value="Publish" {?logged_in | disabled } />
 </div>
 <script type="importmap">
     {
