--- a/html/enter/login.html
+++ b/html/enter/login.html
@@ -1,6 +1,6 @@
 <div id="enter">
   <h2>Log In</h2>
-  <p class="error">{}</p>
+  <p class="error">{error}</p>
   <form method="post" action="/enter?action=login">
     <div id="email-section">
       <label for="email">Email:</label><br />
