--- a/html/header_template.html
+++ b/html/header_template.html
@@ -18,12 +18,12 @@
         <ul class="left">
           <li><a href="/" class="nav-link">Home</a></li>
           <li><a href="/publish" class="nav-link">Publish</a></li>
-          {
+          {?logged_in
           <li><a href="/profile" class="nav-link">Profile</a></li>
           | }
         </ul>
         <ul class="right">
-          {
+          {?logged_in
           <li><a href="/enter?action=logout" class="nav-link">Log Out</a></li>
           |
           <li><a href="/enter" class="nav-link">Log In/Sign Up</a></li>
@@ -31,6 +31,6 @@
         </ul>
       </nav>
     </header>
-    <main>{}</main>
+    <main>{main}</main>
   </body>
 </html>
