add more info to profile page

--- a/html/profile.html
+++ b/html/profile.html
@@ -1,6 +1,14 @@
 <div id="profile">
   <!--ACCOUNT NAME-->
   <h2>Username: {username}</h2>
+  <div class="info-wrapper">
+    <p>Rank: <span class="info">{rank}</span></p>
+    <p>Created on <span class="info">{created_at}</span></p>
+    <p>Articles published: <span class="info">{article_count}</span></p>
+    <p>Comments posted: <span class="info">{comment_count}</span></p>
+    <p>Karma: <span class="info">{karma}</span></p>
+  </div>
   <!--AUTHORED ARTICLES-->
+
   <div id="authored-articles">{articles}</div>
 </div>
