fix publish page

--- a/html/publish.html
+++ b/html/publish.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdn.ckeditor.com/ckeditor5/42.0.1/ckeditor5.css" />
 <div id="publish">
   <h2>Send in an article for publication!</h2>
-  <p class="error">{}</p>
+  <p class="error">{error}</p>
   <form method="post" action="/publish" id="publishForm">
     <div id="title-section" class="section" >
       <label for="title">Title:</label><br />
