--- a/html/admin/user_result.html
+++ b/html/admin/user_result.html
@@ -8,5 +8,7 @@
     <p class="count">Comment count: {comment_count}</p>
     <p class="karma">Karma: {karma}</p>
   </div>
-  <button class="edit-button">Edit</button>
+  <a class="edit-button inverse-button" href="/admin/profile/{username}"
+    >Edit</a
+  >
 </div>
