--- a/html/errors/not_authorized.html
+++ b/html/errors/not_authorized.html
@@ -1,5 +1,5 @@
 <div id="error">
   <h2>Not Authorized</h2>
-  <p>Sorry, but you are not authorized to access this page</p>
+  <p>Sorry, but you are not authorized to access this page.</p>
   <a href="/" class="button">Home</a>
 </div>
