add editor ability

--- a/server/html/article.html
+++ b/server/html/article.html
@@ -8,7 +8,9 @@
     <p class="author-wrapper">
       Written by: <a class="author" href="/profile/{author}">{author}</a>
     </p>
-    <p class="date-wrapper">Published on: <span class="date">{date}</span></p>
+    <p class="date-wrapper">
+      Last updated on: <span class="date">{date}</span>
+    </p>
   </div>
   <p>{content}</p>
 </div>
